--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3349,7 +3349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "timeseries = tmp.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -3360,209 +3371,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "timeseries.set_index('Date',inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "timeseries.sort_index(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Group</th>\n",
-       "      <th>SubGroup</th>\n",
-       "      <th>Impressions</th>\n",
-       "      <th>Clicks</th>\n",
-       "      <th>CostEUR</th>\n",
-       "      <th>AllConversions</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2015-10-13</th>\n",
-       "      <td>Click</td>\n",
-       "      <td>Click - 00</td>\n",
-       "      <td>27399</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>890.71</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-09-08</th>\n",
-       "      <td>Converter</td>\n",
-       "      <td>Converter - Low</td>\n",
-       "      <td>30189</td>\n",
-       "      <td>4406</td>\n",
-       "      <td>1929.66</td>\n",
-       "      <td>72.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-10-06</th>\n",
-       "      <td>Impressions</td>\n",
-       "      <td>Impressions - 01</td>\n",
-       "      <td>1366</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-09-12</th>\n",
-       "      <td>Converter</td>\n",
-       "      <td>Converter - Low</td>\n",
-       "      <td>19483</td>\n",
-       "      <td>2455</td>\n",
-       "      <td>841.59</td>\n",
-       "      <td>31.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  Group          SubGroup  Impressions  Clicks  CostEUR  \\\n",
-       "Date                                                                      \n",
-       "2015-10-13        Click        Click - 00        27399    2009   890.71   \n",
-       "2015-09-08    Converter   Converter - Low        30189    4406  1929.66   \n",
-       "2015-10-06  Impressions  Impressions - 01         1366       0     0.00   \n",
-       "2015-09-12    Converter   Converter - Low        19483    2455   841.59   \n",
-       "\n",
-       "            AllConversions  \n",
-       "Date                        \n",
-       "2015-10-13             0.0  \n",
-       "2015-09-08            72.0  \n",
-       "2015-10-06             0.0  \n",
-       "2015-09-12            31.0  "
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "labels ['Date'] not contained in axis",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-84-ff63aa852f62>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtimeseries\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'SubGroup'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Impressions'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Clicks'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'AllConversions'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpivot_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Date'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'SubGroup'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/pandas/tools/pivot.pyc\u001b[0m in \u001b[0;36mpivot_table\u001b[1;34m(data, values, index, columns, aggfunc, fill_value, margins, dropna, margins_name)\u001b[0m\n\u001b[0;32m    103\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 105\u001b[1;33m         \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    106\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mvalues_passed\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/pandas/indexes/base.pyc\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, errors)\u001b[0m\n\u001b[0;32m   2964\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m'ignore'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2965\u001b[0m                 raise ValueError('labels %s not contained in axis' %\n\u001b[1;32m-> 2966\u001b[1;33m                                  labels[mask])\n\u001b[0m\u001b[0;32m   2967\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2968\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: labels ['Date'] not contained in axis"
+     ]
     }
    ],
    "source": [
-    "timeseries[:4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SubGroup</th>\n",
-       "      <th>Impressions</th>\n",
-       "      <th>Clicks</th>\n",
-       "      <th>AllConversions</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2015-10-13</th>\n",
-       "      <td>Click - 00</td>\n",
-       "      <td>27399</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-09-08</th>\n",
-       "      <td>Converter - Low</td>\n",
-       "      <td>30189</td>\n",
-       "      <td>4406</td>\n",
-       "      <td>72.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-10-06</th>\n",
-       "      <td>Impressions - 01</td>\n",
-       "      <td>1366</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-09-12</th>\n",
-       "      <td>Converter - Low</td>\n",
-       "      <td>19483</td>\n",
-       "      <td>2455</td>\n",
-       "      <td>31.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-09-12</th>\n",
-       "      <td>Click - 02</td>\n",
-       "      <td>3591</td>\n",
-       "      <td>727</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    SubGroup  Impressions  Clicks  AllConversions\n",
-       "Date                                                             \n",
-       "2015-10-13        Click - 00        27399    2009             0.0\n",
-       "2015-09-08   Converter - Low        30189    4406            72.0\n",
-       "2015-10-06  Impressions - 01         1366       0             0.0\n",
-       "2015-09-12   Converter - Low        19483    2455            31.0\n",
-       "2015-09-12        Click - 02         3591     727             0.0"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "timeseries[['SubGroup','Impressions','Clicks','AllConversions']][:5].pivot(columns=['SubGroup'])"
+    "timeseries[['SubGroup','Impressions','Clicks','AllConversions']][:5].pivot_table(index='Date',columns=['SubGroup'])"
    ]
   },
   {
@@ -3644,6 +3473,86 @@
       ]
      },
      "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeseries[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>AllConversions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-09-14</td>\n",
+       "      <td>Impressions</td>\n",
+       "      <td>Impressions - 00</td>\n",
+       "      <td>2068</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-11-17</td>\n",
+       "      <td>Converter</td>\n",
+       "      <td>Converter - Occasional</td>\n",
+       "      <td>35306</td>\n",
+       "      <td>4269</td>\n",
+       "      <td>1561.28</td>\n",
+       "      <td>149.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-09-09</td>\n",
+       "      <td>Click</td>\n",
+       "      <td>Click - 02</td>\n",
+       "      <td>5213</td>\n",
+       "      <td>1210</td>\n",
+       "      <td>555.98</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date        Group                SubGroup  Impressions  Clicks  \\\n",
+       "0 2015-09-14  Impressions        Impressions - 00         2068       0   \n",
+       "1 2015-11-17    Converter  Converter - Occasional        35306    4269   \n",
+       "2 2015-09-09        Click              Click - 02         5213    1210   \n",
+       "\n",
+       "   CostEUR  AllConversions  \n",
+       "0     0.00             0.0  \n",
+       "1  1561.28           149.0  \n",
+       "2   555.98             0.0  "
+      ]
+     },
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
