--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3458,7 +3458,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Impressions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th>Impressions - 00</th>\n",
+       "      <th>Impressions - 01</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-08-01</th>\n",
+       "      <td>1729</td>\n",
+       "      <td>1747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-08-02</th>\n",
+       "      <td>2047</td>\n",
+       "      <td>2997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-08-03</th>\n",
+       "      <td>2682</td>\n",
+       "      <td>2173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-08-04</th>\n",
+       "      <td>2213</td>\n",
+       "      <td>1849</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Impressions                 \n",
+       "SubGroup   Impressions - 00 Impressions - 01\n",
+       "Date                                        \n",
+       "2015-08-01             1729             1747\n",
+       "2015-08-02             2047             2997\n",
+       "2015-08-03             2682             2173\n",
+       "2015-08-04             2213             1849"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[[(u'Impressions',u'Impressions - 00'),(u'Impressions',u'Impressions - 01'),\n",
+    "      (u'Clicks',u'Click - 00'),(u'Clicks',u'Click - 01'),\n",
+    "      (u'Clicks',u'Click - 02'),()]][:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -3471,13 +3545,13 @@
        "           names=[None, u'SubGroup'])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[[(u'Impressions',)]]"
+    "data.columns"
    ]
   },
   {
@@ -3487,7 +3561,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "(u'AllConversions',)(u'AllConversions',)(u'AllConversions',)(u'AllConversions',)"
+   ]
   }
  ],
  "metadata": {
