--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3495,26 +3495,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "corr = data[[(u'Impressions',u'Impressions - 00'),(u'Impressions',u'Impressions - 01'),\n",
+    "      (u'Clicks',u'Click - 00'),(u'Clicks',u'Click - 01'),\n",
+    "      (u'Clicks',u'Click - 02'),(u'AllConversions',u'Converter - High'),\n",
+    "      (u'AllConversions',u'Converter - Mid'),\n",
+    "      (u'AllConversions',u'Converter - Low'),\n",
+    "      (u'AllConversions',u'Converter - Occasional')]].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Impressions</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Clicks</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">AllConversions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th>Impressions - 00</th>\n",
+       "      <th>Impressions - 01</th>\n",
+       "      <th>Click - 00</th>\n",
+       "      <th>Click - 01</th>\n",
+       "      <th>Click - 02</th>\n",
+       "      <th>Converter - High</th>\n",
+       "      <th>Converter - Mid</th>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <th>Converter - Occasional</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Impressions</th>\n",
+       "      <th>Impressions - 00</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.853193</td>\n",
+       "      <td>0.934565</td>\n",
+       "      <td>0.896490</td>\n",
+       "      <td>0.517047</td>\n",
+       "      <td>-0.139827</td>\n",
+       "      <td>-0.160390</td>\n",
+       "      <td>-0.024530</td>\n",
+       "      <td>0.271241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 01</th>\n",
+       "      <td>0.853193</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.825740</td>\n",
+       "      <td>0.874799</td>\n",
+       "      <td>0.738600</td>\n",
+       "      <td>-0.009452</td>\n",
+       "      <td>-0.095459</td>\n",
+       "      <td>0.100979</td>\n",
+       "      <td>0.380012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Clicks</th>\n",
+       "      <th>Click - 00</th>\n",
+       "      <td>0.934565</td>\n",
+       "      <td>0.825740</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.970228</td>\n",
+       "      <td>0.562145</td>\n",
+       "      <td>-0.320117</td>\n",
+       "      <td>-0.327877</td>\n",
+       "      <td>-0.152036</td>\n",
+       "      <td>0.139146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 01</th>\n",
+       "      <td>0.896490</td>\n",
+       "      <td>0.874799</td>\n",
+       "      <td>0.970228</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.726969</td>\n",
+       "      <td>-0.254626</td>\n",
+       "      <td>-0.295875</td>\n",
+       "      <td>-0.077028</td>\n",
+       "      <td>0.215064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 02</th>\n",
+       "      <td>0.517047</td>\n",
+       "      <td>0.738600</td>\n",
+       "      <td>0.562145</td>\n",
+       "      <td>0.726969</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.075988</td>\n",
+       "      <td>-0.029833</td>\n",
+       "      <td>0.212124</td>\n",
+       "      <td>0.426677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">AllConversions</th>\n",
+       "      <th>Converter - High</th>\n",
+       "      <td>-0.139827</td>\n",
+       "      <td>-0.009452</td>\n",
+       "      <td>-0.320117</td>\n",
+       "      <td>-0.254626</td>\n",
+       "      <td>0.075988</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.852826</td>\n",
+       "      <td>0.832659</td>\n",
+       "      <td>0.759427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Mid</th>\n",
+       "      <td>-0.160390</td>\n",
+       "      <td>-0.095459</td>\n",
+       "      <td>-0.327877</td>\n",
+       "      <td>-0.295875</td>\n",
+       "      <td>-0.029833</td>\n",
+       "      <td>0.852826</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.812799</td>\n",
+       "      <td>0.668145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <td>-0.024530</td>\n",
+       "      <td>0.100979</td>\n",
+       "      <td>-0.152036</td>\n",
+       "      <td>-0.077028</td>\n",
+       "      <td>0.212124</td>\n",
+       "      <td>0.832659</td>\n",
+       "      <td>0.812799</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.776168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Occasional</th>\n",
+       "      <td>0.271241</td>\n",
+       "      <td>0.380012</td>\n",
+       "      <td>0.139146</td>\n",
+       "      <td>0.215064</td>\n",
+       "      <td>0.426677</td>\n",
+       "      <td>0.759427</td>\n",
+       "      <td>0.668145</td>\n",
+       "      <td>0.776168</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "MultiIndex(levels=[[u'Impressions', u'Clicks', u'AllConversions'], [u'Click - 00', u'Click - 01', u'Click - 02', u'Converter - High', u'Converter - Low', u'Converter - Mid', u'Converter - Occasional', u'Impressions - 00', u'Impressions - 01', u'Impressions - 02']],\n",
-       "           labels=[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9]],\n",
-       "           names=[None, u'SubGroup'])"
+       "                                           Impressions                   \\\n",
+       "SubGroup                              Impressions - 00 Impressions - 01   \n",
+       "               SubGroup                                                   \n",
+       "Impressions    Impressions - 00               1.000000         0.853193   \n",
+       "               Impressions - 01               0.853193         1.000000   \n",
+       "Clicks         Click - 00                     0.934565         0.825740   \n",
+       "               Click - 01                     0.896490         0.874799   \n",
+       "               Click - 02                     0.517047         0.738600   \n",
+       "AllConversions Converter - High              -0.139827        -0.009452   \n",
+       "               Converter - Mid               -0.160390        -0.095459   \n",
+       "               Converter - Low               -0.024530         0.100979   \n",
+       "               Converter - Occasional         0.271241         0.380012   \n",
+       "\n",
+       "                                          Clicks                        \\\n",
+       "SubGroup                              Click - 00 Click - 01 Click - 02   \n",
+       "               SubGroup                                                  \n",
+       "Impressions    Impressions - 00         0.934565   0.896490   0.517047   \n",
+       "               Impressions - 01         0.825740   0.874799   0.738600   \n",
+       "Clicks         Click - 00               1.000000   0.970228   0.562145   \n",
+       "               Click - 01               0.970228   1.000000   0.726969   \n",
+       "               Click - 02               0.562145   0.726969   1.000000   \n",
+       "AllConversions Converter - High        -0.320117  -0.254626   0.075988   \n",
+       "               Converter - Mid         -0.327877  -0.295875  -0.029833   \n",
+       "               Converter - Low         -0.152036  -0.077028   0.212124   \n",
+       "               Converter - Occasional   0.139146   0.215064   0.426677   \n",
+       "\n",
+       "                                        AllConversions                  \\\n",
+       "SubGroup                              Converter - High Converter - Mid   \n",
+       "               SubGroup                                                  \n",
+       "Impressions    Impressions - 00              -0.139827       -0.160390   \n",
+       "               Impressions - 01              -0.009452       -0.095459   \n",
+       "Clicks         Click - 00                    -0.320117       -0.327877   \n",
+       "               Click - 01                    -0.254626       -0.295875   \n",
+       "               Click - 02                     0.075988       -0.029833   \n",
+       "AllConversions Converter - High               1.000000        0.852826   \n",
+       "               Converter - Mid                0.852826        1.000000   \n",
+       "               Converter - Low                0.832659        0.812799   \n",
+       "               Converter - Occasional         0.759427        0.668145   \n",
+       "\n",
+       "                                                                              \n",
+       "SubGroup                              Converter - Low Converter - Occasional  \n",
+       "               SubGroup                                                       \n",
+       "Impressions    Impressions - 00             -0.024530               0.271241  \n",
+       "               Impressions - 01              0.100979               0.380012  \n",
+       "Clicks         Click - 00                   -0.152036               0.139146  \n",
+       "               Click - 01                   -0.077028               0.215064  \n",
+       "               Click - 02                    0.212124               0.426677  \n",
+       "AllConversions Converter - High              0.832659               0.759427  \n",
+       "               Converter - Mid               0.812799               0.668145  \n",
+       "               Converter - Low               1.000000               0.776168  \n",
+       "               Converter - Occasional        0.776168               1.000000  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np"
+    "corr"
    ]
   },
   {
