--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2185,7 +2185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us start assessing the performance of the keywords from the AllConversions"
+    "Let us start assessing the performance of the converting keywords"
    ]
   },
   {
