--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -272,6 +272,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Does it make sense to d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First of all let us identify the Brand Keywords assuming that \n",
     "- they have at least 10 impressions a month\n",
     "- their CTR is higher the \"normal\""
