--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -272,14 +272,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Does it make sense to d"
+    "## Does it make sense to differentiate among Brand and Generic?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First of all let us identify the Brand Keywords assuming that \n",
+    "Let us identify the Brand Keywords by assuming that \n",
     "- they have at least 10 impressions a month\n",
     "- their CTR is higher the \"normal\""
    ]
@@ -2422,6 +2422,13 @@
     "  \n",
     "df['Group'] = df.apply(setGroup,axis=1)\n",
     "df['SubGroup'] = df.apply(setSubGroup,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let as check how the attributes of the Converters looks like "
    ]
   },
   {
