--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2518,7 +2518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can we move away from LastClick?"
+    "## Can we move away from LastClick?"
    ]
   },
   {
