--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2656,11 +2656,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>ImpressionAssistedConversions</th>\n",
+       "      <th>AllConversions</th>\n",
+       "      <th>Criteria</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Converter - High</th>\n",
+       "      <td>9610.800000</td>\n",
+       "      <td>90426.690000</td>\n",
+       "      <td>7556.500000</td>\n",
+       "      <td>14945.250000</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1.893781e+06</td>\n",
+       "      <td>522184.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <td>612.225000</td>\n",
+       "      <td>54546.787500</td>\n",
+       "      <td>2950.833333</td>\n",
+       "      <td>2261.250000</td>\n",
+       "      <td>573</td>\n",
+       "      <td>9.023092e+05</td>\n",
+       "      <td>122551.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Mid</th>\n",
+       "      <td>1243.808333</td>\n",
+       "      <td>58189.660000</td>\n",
+       "      <td>3265.250000</td>\n",
+       "      <td>2186.750000</td>\n",
+       "      <td>96</td>\n",
+       "      <td>1.077762e+06</td>\n",
+       "      <td>123119.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Occasional</th>\n",
+       "      <td>682.541667</td>\n",
+       "      <td>66226.060000</td>\n",
+       "      <td>3817.250000</td>\n",
+       "      <td>4036.333333</td>\n",
+       "      <td>7333</td>\n",
+       "      <td>1.472056e+06</td>\n",
+       "      <td>192437.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other</th>\n",
+       "      <td>1.750000</td>\n",
+       "      <td>144337.040833</td>\n",
+       "      <td>4754.750000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>229112</td>\n",
+       "      <td>3.541092e+06</td>\n",
+       "      <td>416103.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        ClickAssistedConversions        CostEUR  \\\n",
+       "SubGroup                                                          \n",
+       "Converter - High                     9610.800000   90426.690000   \n",
+       "Converter - Low                       612.225000   54546.787500   \n",
+       "Converter - Mid                      1243.808333   58189.660000   \n",
+       "Converter - Occasional                682.541667   66226.060000   \n",
+       "Other                                   1.750000  144337.040833   \n",
+       "\n",
+       "                        ImpressionAssistedConversions  AllConversions  \\\n",
+       "SubGroup                                                                \n",
+       "Converter - High                          7556.500000    14945.250000   \n",
+       "Converter - Low                           2950.833333     2261.250000   \n",
+       "Converter - Mid                           3265.250000     2186.750000   \n",
+       "Converter - Occasional                    3817.250000     4036.333333   \n",
+       "Other                                     4754.750000        0.000000   \n",
+       "\n",
+       "                        Criteria   Impressions         Clicks  \n",
+       "SubGroup                                                       \n",
+       "Converter - High              13  1.893781e+06  522184.000000  \n",
+       "Converter - Low              573  9.023092e+05  122551.500000  \n",
+       "Converter - Mid               96  1.077762e+06  123119.666667  \n",
+       "Converter - Occasional      7333  1.472056e+06  192437.250000  \n",
+       "Other                     229112  3.541092e+06  416103.333333  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.groupby(by='SubGroup')[['AllConversions','ClickAssistedConversions',\n",
     "                        'ImpressionAssistedConversions',\n",
